# CS1B-Virtual_Methods_Practice

./: CMakeLists.txt  CommissionEmployee.cpp  CommissionEmployee.h  Employee.cpp  Employee.h  HourlyEmployee.cpp  HourlyEmployee.h  README.md  SalariedEmployee.cpp  SalariedEmployee.h  main.cpp
exportToHTML/: CMakeLists.txt.html  CommissionEmployee.cpp.html  CommissionEmployee.h.html  Employee.cpp.html  Employee.h.html  HourlyEmployee.cpp.html  HourlyEmployee.h.html  SalariedEmployee.cpp.html  SalariedEmployee.h.html  index.html  main.cpp.html
